--- a/demo.html
+++ b/demo.html
@@ -29,33 +29,7 @@
   
   <div id='video-container'>
     <video id='player'></video>
-    
-    <!-- Begin FullScreenPlayer HTML snippet -->
-    <div class='boxee-player-osd'>
-      <div class='boxee-player-title'>
-        <div class='boxee-player-title-text'></div>
-      </div>
-      <div class='boxee-seeking'>Loading</div>
-      <div class='boxee-progressbar-container'>
-        <div class='boxee-progressbar-elapsed-container'>
-          <div class='boxee-progressbar-elapsed-text'></div>
-        </div>
-        <div class='boxee-progressbar-duration-container'>
-          <div class='boxee-progressbar-duration-text'></div>
-        </div>
-        <div class='boxee-progressbar'>
-          <div class='boxee-progressbar-wrapper'>
-            <div class='boxee-progressbar-buffered'></div>
-            <div class='boxee-progressbar-position'></div>
-
-            <div class='boxee-scrubber-container'>
-              <div class='boxee-scrubber'></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- End FullScreenPlayer HTML snippet -->
+    <!-- HTML controls will be added here, appended to the end of the container -->
   </div>
   
   <!-- Place dependency script tags in page first: jQuery and underscore -->
